--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -7,89 +7,150 @@
 </head>
 <body>
 	<section>
-		<div class="container mt-5 p-5">
+		<div class="container-fluid mt-5 p-5">
 			<div class="row">
 				<div class="col-md-10 offset-md-1">
-					<div class="card">
-						<div class="card-body">
-							<p class="fs-3 text-center">My Profile</p>
-							<hr>
-							<div class="text-center">
-								<img alt="" src="../img/profile_img/ecom.png" class="border p-2"
-									style="width: 110px; height: 110px; border-radius: 50%;">
-							</div>
-							<div class="col-md-6 offset-md-3 mt-4">
-							<table class="table table-borderless">
-								<tbody>
-								<form>
+					<p class="fs-3 text-center">My Profile</p>
+					<div th:if="${SuccMsg}"
+						class="alert alert-success py-1 px-2 mb-0 text-center"
+						style="font-size: 14px;">
+						<span th:text="${SuccMsg}"></span>
+					</div>
+
+					<div th:if="${errorMsg}"
+						class="alert alert-danger py-1 px-2 mb-0 text-center"
+						style="font-size: 14px;">
+						<span th:text="${errorMsg}"></span>
+					</div>
+					<hr>
+					<div class="text-center">
+						<img alt="" th:src="@{'../img/profile_img/'+${user.profileImage}}"
+							class="border p-2"
+							style="width: 110px; height: 110px; border-radius: 50%;">
+					</div>
+					<div class="col-md-8 offset-md-2 mt-4">
+						<table class="table table-borderless">
+							<tbody>
+								<form action="/user/update-profile" method="post"
+									enctype="multipart/form-data">
 									<tr>
 										<th scope="row">Name</th>
 										<td>:</td>
-										<td><input type="text" name="" class="form-control" value="Manisha"></td>
+										<td><input type="text" name="name" class="form-control"
+											th:value="${user.name}"></td>
 									</tr>
-									
+
 									<tr>
 										<th scope="row">Mobile Number</th>
 										<td>:</td>
-										<td><input type="number" name="" class="form-control" value="2446547855"></td>
+										<td><input type="number" name="mobileNumber"
+											class="form-control" th:value="${user.mobileNumber}"></td>
 									</tr>
-									
+
 									<tr>
 										<th scope="row">Email</th>
 										<td>:</td>
-										<td><input type="email" name="" class="form-control" readonly value="Manisha@gmail.com"></td>
+										<td><input type="email" name="" class="form-control"
+											readonly th:value="${user.email}"></td>
 									</tr>
-									
+
 									<tr>
 										<th scope="row">Address</th>
 										<td>:</td>
-										<td><input type="text" name="" class="form-control" value="Kendrapara"></td>
+										<td><input type="text" name="address"
+											class="form-control" th:value="${user.address}"></td>
 									</tr>
-									
+
 									<tr>
 										<th scope="row">City</th>
 										<td>:</td>
-										<td><input type="text" name="" class="form-control" value="Kendrapara"></td>
+										<td><input type="text" name="city" class="form-control"
+											th:value="${user.city}"></td>
 									</tr>
-									
+
 									<tr>
 										<th scope="row">State</th>
 										<td>:</td>
-										<td><input type="text" name="" class="form-control" value="Odisha"></td>
+										<td><input type="text" name="state" class="form-control"
+											th:value="${user.state}"></td>
 									</tr>
-									
+
 									<tr>
 										<th scope="row">Pincode</th>
 										<td>:</td>
-										<td><input type="number" name="" class="form-control" value="124524"></td>
+										<td><input type="number" name="pincode"
+											class="form-control" th:value="${user.pincode}"></td>
 									</tr>
-									
-									<tr>
-										<th scope="row">Role</th>
-										<td>:</td>
-										<td><input type="text" name="" class="form-control" readonly value="User"></td>
-									</tr>
-									
-									<tr>
-										<th scope="row">Account Status</th>
-										<td>:</td>
-										<td><input type="text" name="" class="form-control" readonly value="Available"></td>
-									</tr>
-									<tr>
+
+								<tr>
+									<th scope="row">Image</th>
+									<td>:</td>
+									<td><input type="file" name="img" class="form-control"
+										value=""></td>
+								</tr>
+
+								<tr>
+									<th scope="row">Role</th>
+									<td>:</td>
+									<td><input type="text" name="" class="form-control"
+										readonly th:value="${user.role}"></td>
+								</tr>
+
+								<tr>
+									<th scope="row">Account Status</th>
+									<td>:</td>
+									<td><input type="text" name="" class="form-control"
+										readonly th:value="${user.isEnable}"></td>
+									<input type="hidden" name="id" th:value="${user.id}">
+								</tr>
+								<tr>
 									<td></td>
 									<td class="text-center">
-									<button class="btn bg-primary text-light">Update</button>
+										<button class="btn bg-primary text-light">Update</button>
 									</td>
-									</tr>
+								</tr>
+								</form>
+							</tbody>
+						</table>
+					</div>
+				</div>
+				<hr>
+				<div class="col-md-10 offset-md-1 mt-1">
+					<div class="row">
+						<p class="text-center fs-3">Change Password</p>
+						<div class="col-md-6 offset-md-3">
+							<table class="table table-borderless">
+								<tbody>
+									<form>
+										<tr>
+											<th scope="row">Current Password</th>
+											<td><input type="text" name="" class="form-control"></td>
+										</tr>
+
+										<tr>
+											<th scope="row">New Password</th>
+											<td><input type="text" name="" class="form-control"></td>
+										</tr>
+
+										<tr>
+											<th scope="row">Confirm Password</th>
+											<td><input type="text" name="" class="form-control"></td>
+										</tr>
+										<tr>
+											<td></td>
+											<td class="text-center">
+												<button class="btn bg-primary text-light">Update</button>
+											</td>
+										</tr>
 									</form>
 								</tbody>
 							</table>
-							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+
 	</section>
 
 </body>
