--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<section>
-		<div class="container-fluid mt-5 p-5">
-			<div class="card card-sh">
-				<div class="card-header text-center fs-4">
-					<p class="fs-4">View Product</p>
-					<div th:if="${SuccMsg}" class="alert alert-success py-1 px-2 mb-0"
+		<div class="container-fluid mt-5 p-3">
+		<div class="row">
+				<p class="text-center fs-3 mt-2">All Products</p>
+				<hr>
+				<a href="/admin/" class="text-decoration-none fs-4"><i
+					class="fa-solid fa-circle-left"></i>Back</a>
+				<div th:if="${SuccMsg}" class="alert alert-success py-1 px-2 mb-0"
 						style="font-size: 14px;">
 						<span th:text="${SuccMsg}"></span>
 					</div>
@@ -21,9 +23,24 @@
 						<span th:text="${errorMsg}"></span>
 					</div>
 				</div>
-				<div class="card-body">
-					<table class="table">
-						<thead>
+				<div class="col-md-4 p-3">
+
+					<form action="/admin/products" method="get">
+						<div class="row">
+							<div class="col">
+								<input type="text" class="form-control" name="ch"
+									placeholder="Search product">
+							</div>
+							<div class="col">
+								<button class="btn btn-primary col">Search</button>
+							</div>
+						</div>
+					</form>
+					</div>
+			<!-- <div class="card card-sh">-->
+				<div class="p-3"> 
+					<table class="table table-bordered">
+						<thead class="table-light">
 							<tr>
 								<th scope="col">SL No</th>
 								<th scope="col">Image</th>
@@ -59,6 +76,7 @@
 				</div>
 			</div>
 		</div>
+		<!--</div> -->
 	</section>
 </body>
 </html>
