--- a/src/main/resources/templates/admin/orders.html
+++ b/src/main/resources/templates/admin/orders.html
@@ -26,10 +26,10 @@
 				</div>
 				<div class="col-md-4 p-4">
 
-					<form>
+					<form action="/admin/search-order" method="get">
 						<div class="row">
 							<div class="col">
-								<input type="text" class="form-control" name=""
+								<input type="text" class="form-control" name="orderId"
 									placeholder="Enter Order Id">
 							</div>
 							<div class="col">
@@ -40,7 +40,7 @@
 
 				</div>
 				<div class="col-md-12 ps-4 pe-4">
-					<table class="table table-bordered">
+					<table class="table table-bordered text-light">
 						<thead>
 							<tr>
 								<th scope="col">Order Id</th>
@@ -53,55 +53,116 @@
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="o:${orders}">
-								<th scope="row">[[${o.orderId}]]</th>
-								<td>Name : [[${o.orderAddress.firstName+' ' +
-									o.orderAddress.lastName}]]<br> Email :
-									[[${o.orderAddress.email}]]<br> Mobno :
-									[[${o.orderAddress.phoneNo}]]<br> Address :
-									[[${o.orderAddress.address}]]<br> City :
-									[[${o.orderAddress.city}]]<br> State :
-									[[${o.orderAddress.state}]],[[${o.orderAddress.pincode}]]
+							<th:block th:if="${srch}">
+								<th:block th:if="${orderDtls!=null}">
+									<tr>
+										<th scope="row">[[${orderDtls.orderId}]]</th>
+										<td>Name : [[${orderDtls.orderAddress.firstName+' ' +
+											orderDtls.orderAddress.lastName}]]<br> Email :
+											[[${orderDtls.orderAddress.email}]]<br> Mobno :
+											[[${orderDtls.orderAddress.phoneNo}]]<br> Address :
+											[[${orderDtls.orderAddress.address}]]<br> City :
+											[[${orderDtls.orderAddress.city}]]<br> State :
+											[[${orderDtls.orderAddress.state}]],[[${orderDtls.orderAddress.pincode}]]
 
-								</td>
-								<td>[[${o.orderDate}]]</td>
-								<td>[[${o.product.title}]]</td>
-								<td>Quantity : [[${o.quantity}]] <br>Price :
-									[[${o.price}]] <br>Total Price : [[${o.quantity *
-									o.price}]]
-								</td>
-								<td>[[${o.status}]]</td>
-								<td>
-									<form action="/admin/update-order-status" method="post">
-										<div class="row">
-											<div class="col">
-												<select class="form-control" name="st">
-													<option value="" disabled selected>--Select--</option>
-													<option value="1">In Progress</option>
-													<option value="2">Order Recived</option>
-													<option value="3">Product Packed</option>
-													<option value="4">Out for Delivery</option>
-													<option value="5">Delivered</option>
-													<option value="6">Cancelled</option>
-												</select>
-											</div>
-											<input th:value="${o.id}" name="id" type="hidden">
-											<div class="col">
-												<div
-													th:if="${o.status == 'Cancelled' || o.status=='Delivered'}">
-													<button class="btn btn-primary btn-sm col disabled">Update</button>
+										</td>
+										<td>[[${orderDtls.orderDate}]]</td>
+										<td>[[${orderDtls.product.title}]]</td>
+										<td>Quantity : [[${orderDtls.quantity}]] <br>Price :
+											[[${orderDtls.price}]] <br>Total Price :
+											[[${orderDtls.quantity * orderDtls.price}]]
+										</td>
+										<td>[[${orderDtls.status}]]</td>
+										<td>
+											<form action="/admin/update-order-status" method="post">
+												<div class="row">
+													<div class="col">
+														<select class="form-control" name="st">
+															<option value="" disabled selected>--Select--</option>
+															<option value="1">In Progress</option>
+															<option value="2">Order Recived</option>
+															<option value="3">Product Packed</option>
+															<option value="4">Out for Delivery</option>
+															<option value="5">Delivered</option>
+															<option value="6">Cancelled</option>
+														</select>
+													</div>
+													<input th:value="${orderDtls.id}" name="id" type="hidden">
+													<div class="col">
+														<div
+															th:if="${orderDtls.status == 'Cancelled' || orderDtls.status=='Delivered'}">
+															<button class="btn btn-primary btn-sm col disabled">Update</button>
+														</div>
+														<div
+															th:unless="${orderDtls.status == 'Cancelled' || orderDtls.status=='Delivered'}">
+															<button class="btn btn-primary btn-sm col">Update</button>
+														</div>
+													</div>
 												</div>
-												<div
-													th:unless="${o.status == 'Cancelled' || o.status=='Delivered'}">
-													<button class="btn btn-primary btn-sm col">Update</button>
+											</form>
+										</td>
+
+
+									</tr>
+								</th:block>
+								<th:block th:unless="${orderDtls!=null}">
+									<p class="fs-3 text-center text-danger">[[${session.errorMsg}]]</p>
+								</th:block>
+							</th:block>
+
+							<th:block th:unless="${srch}">
+								<tr th:each="o:${orders}">
+									<th scope="row">[[${o.orderId}]]</th>
+									<td>Name : [[${o.orderAddress.firstName+' ' +
+										o.orderAddress.lastName}]]<br> Email :
+										[[${o.orderAddress.email}]]<br> Mobno :
+										[[${o.orderAddress.phoneNo}]]<br> Address :
+										[[${o.orderAddress.address}]]<br> City :
+										[[${o.orderAddress.city}]]<br> State :
+										[[${o.orderAddress.state}]],[[${o.orderAddress.pincode}]]
+
+									</td>
+									<td>[[${o.orderDate}]]</td>
+									<td>[[${o.product.title}]]</td>
+									<td>Quantity : [[${o.quantity}]] <br>Price :
+										[[${o.price}]] <br>Total Price : [[${o.quantity *
+										o.price}]]
+									</td>
+									<td>[[${o.status}]]</td>
+									<td>
+										<form action="/admin/update-order-status" method="post">
+											<div class="row">
+												<div class="col">
+													<select class="form-control" name="st">
+														<option value="" disabled selected>--Select--</option>
+														<option value="1">In Progress</option>
+														<option value="2">Order Recived</option>
+														<option value="3">Product Packed</option>
+														<option value="4">Out for Delivery</option>
+														<option value="5">Delivered</option>
+														<option value="6">Cancelled</option>
+													</select>
+												</div>
+												<input th:value="${o.id}" name="id" type="hidden">
+												<div class="col">
+													<div
+														th:if="${o.status == 'Cancelled' || o.status=='Delivered'}">
+														<button class="btn btn-primary btn-sm col disabled">Update</button>
+													</div>
+													<div
+														th:unless="${o.status == 'Cancelled' || o.status=='Delivered'}">
+														<button class="btn btn-primary btn-sm col">Update</button>
+													</div>
 												</div>
 											</div>
-										</div>
-									</form>
-								</td>
+										</form>
+									</td>
 
 
-							</tr>
+								</tr>
+							</th:block>
+
+
 						</tbody>
 					</table>
 				</div>
